crates/lang/tests/ui/contract/fail/constructor-wildcard-selector.stderr
error: encountered conflicting ink! attribute argument
 --> tests/ui/contract/fail/constructor-wildcard-selector.rs:9:28
  |
9 |         #[ink(constructor, selector = _)]
  |                            ^^^^^^^^^^^^^^

error: wildcard selectors are not allowed for constructors
 --> tests/ui/contract/fail/constructor-wildcard-selector.rs:9:28
  |
9 |         #[ink(constructor, selector = _)]
  |                            ^^^^^^^^^^^^^^
